# kalshi-15m-sell-bot-public-preview

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE.md  LICENSE_OPTIONS.md  LINKEDIN_POST.md  MANIFEST.json  Makefile  PORTFOLIO_COPY.md  PRIVACY.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  README.md  RISK_DISCLOSURE.md  SBOM.cdx.json  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIRST.md  SETUP_WINDOWS.bat  SHA256SUMS.txt  START_WINDOWS.bat  THIRD_PARTY_NOTICES.md  bot.py  kalshi_15m_sell_bot.py  public_safety.py  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  security.yml
docs/: ARCHITECTURE.md  PROFIT_POTENTIAL.md  RELEASE_STORY.md  THREAT_MODEL.md  VIBECODING_LEARNING_PATH.md
scripts/: build_release.py  generate_sbom.py  security_check.py  verify_release.py
tests/: test_engine_guards.py  test_launcher.py  test_public_safety.py  test_release_integrity.py  test_sbom.py
